--- a/app/templates/GM_add_city.html
+++ b/app/templates/GM_add_city.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Add New City</title>
+    {% include 'partials/theme_head.html' %}
+
     <style>
         /* Center everything */
         body {
