--- a/app/templates/GM_add_item.html
+++ b/app/templates/GM_add_item.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Add Item</title>
+    {% include 'partials/theme_head.html' %}
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Center everything */
