--- a/app/templates/GM_view_shops.html
+++ b/app/templates/GM_view_shops.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>GM - View Shops</title>
+    {% include 'partials/theme_head.html' %}
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <style>
         body {
