--- a/app/templates/Player_Home.html
+++ b/app/templates/Player_Home.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Player Dashboard</title>
+    {% include 'partials/theme_head.html' %}
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     <style>
         .main-layout {
