--- a/app/templates/Player_city_view.html
+++ b/app/templates/Player_city_view.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>{% if city %}{{ city.name }} Shops{% endif %}</title>
+    {% include 'partials/theme_head.html' %}
+
     <style>
         /* Center everything */
         body {
