--- a/app/templates/Player_view_city_shops.html
+++ b/app/templates/Player_view_city_shops.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>{{ shop.name }} - Available Items</title>
+    {% include 'partials/theme_head.html' %}
+
     <style>
         /* Center everything */
         body {
