--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Market{% endblock %}</title>
+    {% include 'partials/theme_head.html' %}
+
 </head>
 <body>
     <header>
