--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Register</title>
+    {% include 'partials/theme_head.html' %}
+
     <style>
         /* Center everything */
         body {
