--- a/app/templates/GM_add_shop.html
+++ b/app/templates/GM_add_shop.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Add Shop</title>
+    {% include 'partials/theme_head.html' %}
+
     <style>
         body {
             display: flex;
