--- a/app/templates/GM_edit_item.html
+++ b/app/templates/GM_edit_item.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edit Item</title>
+    {% include 'partials/theme_head.html' %}
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
