--- a/app/templates/GM_view_city_shops.html
+++ b/app/templates/GM_view_city_shops.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Shops in {{ city.name }}</title>
+    {% include 'partials/theme_head.html' %}
+
     <style>
         body {
             display: flex;
