Updated UX & User constraints
Added in GM campaign selection menu.  Updated Player UX with a  character model, equipable items and stats.
Basic framework for payment system and limiting seats.

--- a/app/templates/GM_Home.html
+++ b/app/templates/GM_Home.html
@@ -267,6 +267,7 @@
 
     <!-- Button container for navigation -->
     <div class="button-container">
+        <a href="{{ url_for('gm.gm_view_campaigns') }}" class="button">Manage Campaigns</a>
         <a href="{{ url_for('gm.gm_view_cities') }}" class="button">Manage Cities</a>
         <a href="{{ url_for('gm.gm_view_shops') }}" class="button">Manage Shops</a>
         <a href="{{ url_for('gm.gm_view_items') }}" class="button">Manage Items</a>
